# gtest-tutorial

./: GTest.odp
gtests/: CMakeLists.txt
gtests/array/: CMakeLists.txt  array.cpp  array.hpp
gtests/factorial/: CMakeLists.txt  factorial.cpp  factorial.hpp  main.cpp
gtests/square/: CMakeLists.txt  square.cpp  square.hpp
gtests/tests/: CMakeLists.txt
gtests/tests/array_test/: CMakeLists.txt  test_array.cpp  test_main.cpp
gtests/tests/death_test/: CMakeLists.txt  test_array.cpp
gtests/tests/factorial_test/: CMakeLists.txt  test_factorial.cpp
gtests/tests/square_test/: CMakeLists.txt  test_square.cpp
gtests/tests/valueParameterizedTests/: .test_VPTest.cpp.swp  CMakeLists.txt  test_VPTest.cpp
